# binventory

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  entrypoint.sh  manage.py  pyproject.toml
binventory/: settings.py  urls.py  wsgi.py
inventory/: admin.py  context_processors.py  models.py  urls.py  utils.py  views.py
inventory/migrations/: 0001_initial.py
inventory/templates/inventory/: base.html  box.html  import.html  index.html  item.html  new.html
inventory/templates/registration/: login.html
theme/static_src/: package.json
theme/static_src/src/: styles.css
