[project]
name = "binventory"
version = "0.1.0"
description = "Your personal home inventory system! Label, scan QR codes, and keep track of all your stored items effortlessly. Never lose anything again!"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.6",
    "psycopg>=3.2.4",
    "psycopg-binary>=3.2.6",
    "gunicorn>=23.0.0",
    "django-tailwind[reload]>=4.0.1",
    "cookiecutter>=2.6.0",
    "qrcode>=8.2",
    "pillow>=11.2.1",
    "whitenoise>=6.9.0",
    "python-dotenv>=1.1.0",
    "openpyxl>=3.1.5",
]
